tests/rascal/negative/type_errors/L1/19_expression_ES10_D4_91.ob
MODULE Test19;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               q := ((q & (1223 > y)) & (p & (1223 >= (- 1223))));
               y := ((z * 1) DIV 1223);
               y := 0;
               z := (- (((- 0) MOD 1223) MOD 2));
               q := (~ (x < 0));
               y := (- x);
               p := ((~ (z <= (x - 0))) & r);
               x := 200;
  (* error *)  q := p;
               y := 200
END Test19.